# LMLM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/eval/: evalset_path.yaml
configs/gpt4o/: default.json
configs/llama/: default.json  lora-ft.json
configs/tiny-llama/tiny-llama2-176M/: config.json
configs/tiny-llama/tiny-llama2-382M/: config.json
data/: dwiki-eval100_chatgpt_gpt4o-v7.1_cleaned.json  dwiki-eval1k_annotator_llama-v6.1_cleaned.json  squad-eval100_chatgpt_gpt4o-v7.1_cleaned.json  squad-train1k_chatgpt_gpt4o-v7.1_cleaned.json
data/database/: dwiki-eval100-annotator_database.json
data/ids/: dwiki-eval100-ids.json  squad-eval100-ids.json  squad-train1k-ids.json
experiment/eval/: eval_factscore.py  eval_trex.py  example_lmlm_inference.py  factscorer.py  lighteval_tasks.py
output/annotation/: squad-eval100_chatgpt_gpt4o-v7.1.json  squad-eval100_llama-LMLM-Annotator_llama-v6.1.json
output/database/: squad-eval100-Annotator_database.json
output/examples/LMLM-llama2-382M/: examples_LMLM-llama2-382M.json
output/examples/Standard-llama2-382M/: examples_Standard-llama2-382M.json
prompts/: gpt4o-v7.1.json  gpt4o-v7.1.md  llama-v6.1.json  llama-v6.md
scripts/annotate/: annotate_annotator.sh  annotate_gpt4.sh
scripts/eval/: eval_factscore.sh  eval_nlu_task.sh  eval_trex.sh  example_lmlm_inference.sh
scripts/train/: extract_database.sh  ft-llama8b_annotator.sh  pretrain.sh
src/lmlm/: constants.py  modeling_lmlm.py
src/lmlm/annotate/: annotate.py  annotators.py  data_manager.py  dataloader.py  utils.py
(+12 files in other folders)
